feat: :tada: Add base config file and cli main
Add the configuration file to share across the project. Add the main of the CLI with the implementation of services folder. Change package.json version.

--- a/package.json
+++ b/package.json
@@ -1,22 +1,25 @@
 {
   	"name": "oak",
-	"version": "0.1",
-	"description": "",
-	"main": "index.js",
-	"scripts": {
-		"test": "echo \"Error: no test specified\" && exit 1"
-	},
-	"repository": {
-		"type": "git",
-		"url": "git+https://github.com/mics-devs-stuff/oak-cli.git"
-	},
-	"keywords": [],
-	"author": "",
-	"license": "ISC",
-	"bugs": {
-		"url": "https://github.com/mics-devs-stuff/oak-cli/issues"
-	},
-	"homepage": "https://github.com/mics-devs-stuff/oak-cli#readme",
-	"bin": "cli.js",
+  	"version": "0.1.3",
+  	"description": "",
+  	"main": "src/main.js",
+  	"scripts": {
+  	  	"test": "echo \"Error: no test specified\" && exit 1"
+  	},
+  	"repository": {
+  	  	"type": "git",
+  	  	"url": "git+https://github.com/mics-devs-stuff/oak-cli.git"
+  	},
+  	"keywords": [],
+  	"author": "",
+  	"license": "ISC",
+  	"bugs": {
+  	  	"url": "https://github.com/mics-devs-stuff/oak-cli/issues"
+  	},
+  	"homepage": "https://github.com/mics-devs-stuff/oak-cli#readme",
+  	"bin": "cli.js",
+  	"dependencies": {
+  	  	"arg": "^5.0.1"
+  	},
 	"type": "module"
 }
