--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   	"name": "oak",
-  	"version": "0.1.3",
+  	"version": "0.1.4",
   	"description": "",
   	"main": "src/main.js",
   	"scripts": {
@@ -19,7 +19,7 @@
   	"homepage": "https://github.com/mics-devs-stuff/oak-cli#readme",
   	"bin": "cli.js",
   	"dependencies": {
-  	  	"arg": "^5.0.1"
-  	},
-	"type": "module"
+  	  	"arg": "^5.0.1",
+  	  	"esm": "^3.2.25"
+  	}
 }
