feat: :heavy_plus_sign: add text-table package

--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
   	"dependencies": {
   	  	"arg": "^5.0.1",
   	  	"chalk": "^5.0.1",
-  	  	"esm": "^3.2.25"
+  	  	"esm": "^3.2.25",
+  	  	"text-table": "^0.2.0"
   	},
-	"type": "module"
+  	"type": "module"
 }
