feat: :sparkles: Add help command with prompts
Exit process if the command is not available. Add second info color for chalk.

--- a/src/config.json
+++ b/src/config.json
@@ -55,6 +55,10 @@
         "info": {
             "color": "#81B5D9",
             "message": "INFO!"
+        },
+        "info2": {
+            "color": "#C087BD",
+            "message": "INFO!"
         }
     },
     "docs": {
