--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   	  	"arg": "^5.0.1",
   	  	"chalk": "^5.0.1",
   	  	"esm": "^3.2.25",
+  	  	"listr": "^0.14.3",
   	  	"text-table": "^0.2.0"
   	},
   	"type": "module"
