feat(Commands): :art: Add Oak CLI version prompt
Add the oak version prompt and all the dependencies used

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,6 +1,7 @@
 {
     "conventionalCommits.scopes": [
         "Config",
-        "Schema Validation"
+        "Schema Validation",
+        "Commands"
     ]
 }
