--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   	"name": "oak",
   	"version": "0.0.5",
-  	"description": "",
+  	"description": "Oak CLI, an helper for your codebase greenwood <3",
   	"exports": "./src/main.js",
   	"scripts": {
   	  	"test": "echo \"Error: no test specified\" && exit 1"
@@ -20,6 +20,7 @@
   	"bin": "cli.js",
   	"dependencies": {
   	  	"arg": "^5.0.1",
+  	  	"cfonts": "^3.2.0",
   	  	"chalk": "^5.0.1",
   	  	"esm": "^3.2.25",
   	  	"joi": "^17.6.0",
