--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   	"name": "oak",
-  	"version": "0.0.5",
-  	"description": "Oak CLI, an helper for your codebase greenwood <3",
+  	"version": "0.0.8",
+  	"description": "Oak CLI, a tool for your codebase <3",
   	"exports": "./src/main.js",
   	"scripts": {
   	  	"test": "echo \"Error: no test specified\" && exit 1"
@@ -23,6 +23,8 @@
   	  	"cfonts": "^3.2.0",
   	  	"chalk": "^5.0.1",
   	  	"esm": "^3.2.25",
+  	  	"execa": "^9.1.0",
+  	  	"inquirer": "^9.2.23",
   	  	"joi": "^17.6.0",
   	  	"listr": "^0.14.3",
   	  	"log-symbols": "^5.1.0",
