--- a/.github/workflows/npm-publish.yml
+++ b/.github/workflows/npm-publish.yml
@@ -1,7 +1,7 @@
 # This workflow will run tests using node and then publish a package to GitHub Packages when a release is created
 # For more information see: https://docs.github.com/en/actions/publishing-packages/publishing-nodejs-packages
 
-name: Node.js Package
+name: Oak CLI
 
 on:
   release:
@@ -28,6 +28,6 @@ jobs:
           node-version: 18.18.0
           registry-url: https://registry.npmjs.org/
       - run: npm ci
-      - run: npm publish
+      - run: publish --access public
         env:
           NODE_AUTH_TOKEN: ${{secrets.npm_token}}
