--- a/.github/workflows/npm-publish.yml
+++ b/.github/workflows/npm-publish.yml
@@ -1,7 +1,7 @@
 # This workflow will run tests using node and then publish a package to GitHub Packages when a release is created
 # For more information see: https://docs.github.com/en/actions/publishing-packages/publishing-nodejs-packages
 
-name: Oak CLI
+name: oak-cli
 
 on:
   release:
@@ -16,7 +16,6 @@ jobs:
         with:
           node-version: 18.18.0
       - run: npm ci
-      - run: npm test
 
   publish-npm:
     needs: build
