--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  	"name": "oakcli",
+  	"name": "@michelangelo-devs/oak-cli",
   	"version": "0.9.1",
   	"description": "Oak CLI, a tool for your codebase <3",
   	"exports": "./src/main.js",
